force-app/main/default/objects/Order_Processing_Settings__mdt/Order_Processing_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Order Processing Settings</label>
    <pluralLabel>Order Processing Settings</pluralLabel>
</CustomObject>