force-app/main/default/objects/Order_Processing_Settings__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>