force-app/main/default/objects/Order_Processing_Settings__mdt/fields/Maximum_Retries__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Retries__c</fullName>
    <label>Maximum Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>