force-app/main/default/objects/Order_Processing_Settings__mdt/fields/QuoteLines_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>QuoteLines_Endpoint__c</fullName>
    <label>QuoteLines Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>