force-app/main/default/objects/Order_Processing_Settings__mdt/fields/Webstore_Free_Trial_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Webstore_Free_Trial_Endpoint__c</fullName>
    <label>Webstore Free Trial Endpoint</label>
    <type>Url</type>
</CustomField>